# slice

./: .gitignore  README.md  dev.sh
dashboard/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.vue  api.js  format.js  styles.css
dashboard/src/components/: KpiCards.vue  Logo.vue  ModelBreakdown.vue  RecentCalls.vue  SpendChart.vue  WhenToSwitch.vue
gateway/: .env.example  .gitignore  docker-compose.yml  package-lock.json  package.json  tsconfig.json
gateway/db/init/: 01_schema.sql
gateway/src/: agent.ts  agentHandler.ts  budget.ts  cache.ts  db.ts  index.ts  logger.ts  pricing.ts  proxy.ts  ranking.ts  redis.ts  router.ts  rules.ts  stats.ts  team.ts
gateway/src/providers/: google.ts  openai.ts  registry.ts  types.ts
gateway/test/: agent.test.ts  google.test.ts  providers.test.ts  router.test.ts  rules.test.ts
mockups/: dashboard.html
pipeline/: .gitignore
pipeline/slice-pipeline/: README.md  pyproject.toml  requirements.txt
pipeline/slice-pipeline/conf/base/: catalog.yml
pipeline/slice-pipeline/src/slice_pipeline/: __init__.py  __main__.py  settings.py
pipeline/slice-pipeline/src/slice_pipeline/pipelines/model_stats/: __init__.py  nodes.py  pipeline.py
