[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "slice_pipeline"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.4.0",
]

[project.scripts]
slice-pipeline = "slice_pipeline.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "slice_pipeline.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "slice_pipeline"
project_name = "slice_pipeline"
kedro_init_version = "1.4.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"
